css/edit.css
/* this file is being included for editing a page */

#glue-colorpicker {
	/* colorpicker used for page and objects alike */
	bottom: 20px;
	position: fixed;
	right: 20px;
}

#glue-colorpicker-transparent {
	/* icon for transparency inside the colorpicker element */
	background-image: url(../img/colorpicker-transparent.png);
	border-style: solid;
	border-width: 1px;
	bottom: 6px;
	cursor: pointer;
	height: 10px;
	position: absolute;
	right: 215px;
	width: 10px;
}

.glue-colorpicker-transparent-set {
	/* set when color is set to transparent */
	border-color: red;
}

.glue-colorpicker-transparent-notset {
	/* set when color is set to all other colors */
	border-color: white;
}

.glue-file-upload {
	/* a file upload button */
	width: 32px;
	height: 32px;
	overflow: hidden;
}

.glue-contextmenu-left {
	/* a context menu item to the object's left */
	margin-bottom: 10px;
	margin-right: 20px;
}

.glue-contextmenu-top {
	/* a context menu item on top of the object */
	margin-bottom: 20px;
	margin-right: 10px;
}

.glue-grid {
	/* a grid line */
}

.glue-grid-x {
	/* a horizontal grid line */
}

.glue-grid-y {
	/* a vertical grid line */
}

.glue-guide {
	/* a guide line */
}

.glue-guide-x {
	/* a vertical guide line (after n pixels) */
}

.glue-guide-y {
	/* a horizontal guide line (after n pixels) */
}

.glue-menu {
	/* a menu item */
	margin-bottom: 5px;
	margin-left: 5px;
	margin-right: 5px;
	margin-top: 5px;
	opacity: 1.0;
}

.glue-menu-enabled {
	/* menu items that have an enabled/disabled state should use these classes */
	/* this only works with images that are a bit transparent at least */
	background-color: rgba(0, 255, 0, 0.5);
}

.glue-menu-disabled {
	/* menu items that have an enabled/disabled state should use these classes */
	/* this only works with images that are a bit transparent at least */
}

.glue-menu-new {
	/* a "new"-menu item (shown when clicking the background once) */
}

.glue-menu-page {
	/* a "page"-menu item (shown when doubleclicking the background) */
}

.glue-selected {
	/* class for selected objects */
	border-color: red;
	border-style: dashed;
	border-width: 1px;
}

.glue-ui {
	/* all ui elements should use this class */
}

body.glue-mobile-layout-edit {
	box-shadow: inset -2px 0 #0a4fb1;
}

body.glue-mobile-layout-edit:after {
	background: #0a4fb1;
	color: #fff;
	content: attr(data-mobile-layout-label);
	font-family: Verdana, Geneva, Tahoma, sans-serif;
	font-size: 11px;
	left: 50px;
	padding: 4px 7px;
	pointer-events: none;
	position: fixed;
	top: 32px;
	z-index: 260;
}

.glue-mobile-layout-menu-item {
	background: #dedbcf;
	border: solid 1px #202020;
	box-sizing: border-box;
	color: #111;
	font-family: Verdana, Geneva, Tahoma, sans-serif;
	font-size: 18px;
	font-weight: bold;
	height: 32px;
	line-height: 30px;
	text-align: center;
	width: 32px;
}

#social-editor-top-pane {
	background: #dcd8ca;
	border-bottom: solid 1px #9c9788;
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.18);
	color: #222;
	font-family: Verdana, Geneva, Tahoma, sans-serif;
	left: 0;
	position: fixed;
	right: 0;
	top: 0;
	z-index: 270;
}

#social-editor-top-pane .social-editor-menu-bar {
	align-items: center;
	background: #eeeadd;
	display: flex;
	gap: 2px;
	height: 24px;
	padding: 0 6px;
}

#social-editor-top-pane .social-editor-brand {
	font-size: 11px;
	font-weight: bold;
	margin-right: 10px;
}

#social-editor-top-pane .social-editor-menu {
	position: relative;
}

#social-editor-top-pane .social-editor-menu-trigger,
#social-editor-top-pane .social-editor-menu-item {
	background: transparent;
	border: solid 1px transparent;
	color: #222;
	cursor: pointer;
	font-family: Verdana, Geneva, Tahoma, sans-serif;
	font-size: 11px;
	height: 21px;
	padding: 2px 8px;
	text-align: left;
}

#social-editor-top-pane .social-editor-menu-trigger:hover,
#social-editor-top-pane .social-editor-menu:hover .social-editor-menu-trigger,
#social-editor-top-pane .social-editor-menu-hover .social-editor-menu-trigger,
#social-editor-top-pane .social-editor-menu-open .social-editor-menu-trigger {
	background: #f8f6ed;
	border-color: #8d8878;
}

#social-editor-top-pane .social-editor-menu-panel {
	background: #f3efdf;
	border: solid 1px #8d8878;
	box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.22);
	display: none;
	left: 0;
	min-width: 150px;
	padding: 3px;
	position: absolute;
	top: 20px;
	z-index: 280;
}

#social-editor-top-pane .social-editor-menu-open .social-editor-menu-panel {
	display: block;
}

#social-editor-top-pane .social-editor-menu:hover .social-editor-menu-panel,
#social-editor-top-pane .social-editor-menu-hover .social-editor-menu-panel {
	display: block;
}

#social-editor-top-pane .social-editor-menu-item {
	display: block;
	position: relative;
	width: 100%;
}

#social-editor-top-pane .social-editor-menu-item:hover {
	background: #d8e2f5;
}

#social-editor-top-pane .social-editor-menu-separator {
	border-top: solid 1px #b6b0a1;
	height: 0;
	margin: 3px 4px;
}

#social-editor-top-pane .social-editor-submenu {
	position: relative;
}

#social-editor-top-pane .social-editor-submenu-trigger:after {
	content: ">";
	float: right;
	margin-left: 22px;
}

#social-editor-top-pane .social-editor-submenu-panel {
	background: #f3efdf;
	border: solid 1px #8d8878;
	box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.22);
	display: none;
	left: calc(100% - 8px);
	min-width: 205px;
	padding: 3px;
	position: absolute;
	top: -6px;
	z-index: 290;
}

#social-editor-top-pane .social-editor-submenu:hover .social-editor-submenu-panel,
#social-editor-top-pane .social-editor-submenu-hover .social-editor-submenu-panel {
	display: block;
}

#social-editor-top-pane .social-editor-menu-upload {
	overflow: hidden;
}

#social-editor-top-pane .social-editor-menu-upload input[type="file"] {
	cursor: pointer;
	left: 0;
	top: 0;
}

#social-editor-edit-panel {
	background: #dcd8ca;
	border: solid 1px #8f8979;
	box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.18);
	left: 5px;
	padding: 3px;
	position: fixed;
	top: 34px;
	width: 36px;
	z-index: 265;
}
/* ... */

